--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://your-github-Rizsaurav.github.io/Portfolio",
+  "homepage": "https://rizsaurav.github.io/Portfolio",
+
   "dependencies": {
     "@react-pdf/renderer": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.2",
