Ensure .nojekyll is included before deployment

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build && touch build/.nojekyll",
+
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
